--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -94,6 +94,11 @@ footer {
     text-align: right;
 }
 
+footer {
+    display: flex;
+    justify-content: space-between;
+}
+
 /* CONTENT */
 
 div.outline-2 {
